--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,84 @@
+* {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+  }
+
 body {
     margin: 0;
 }
 
 .menubar {
     display: flex;
-    padding-left: 2vw;
+    padding-left: 1.5vw;
+    padding-right: 2vw;
+    padding-top: 1vh;
     justify-content: flex-start;
     align-items: center;
-    height: 5vh;
+    height: 10vh;
     width: 100vw;
     fill: white;
+
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.25em;
 }
 
-.fp-greeter {
-    height: 100vh;
-    width: 100vw;
-    fill: white;
+.menubar p {
+    font-family: Helvetica;
+    font-size: 1.5em;
+    margin-right: auto;
+    position: relative;
+    left: -1.5vw;
+}
+
+.menubar p span{
+    color: #009de7;
+}
+
+.menubar img {
+    height: 100%;
+}
+
+.menubar ul {
+    display: block;
+    position: relative;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    list-style: none;
+}
+
+.menubar ul div {
+    visibility: hidden;
+    position: absolute;
+    background-color: #f9f9f9;
+    z-index: 1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.menubar ul div li {
+    position: relative;
+    display: flex;
+    width: 20vw;
+    height: 5vh;
+    text-align: left;
+    padding-left: 1vw;
+    margin: 0;
+    align-items: center;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+}
+
+.menubar ul:hover div{
+    visibility: visible;
+}
+
+.menubar ul div li:hover {
+    color: #009de7;
+}
+
+.footer {
+    height: 30vh;
+    background-color: #292929ff;
 }
