--- a/css/homepage.css
+++ b/css/homepage.css
@@ -21,18 +21,53 @@
 }
 
 .fp-whyus {
-    width: 100vw;
+    width: 75vw;
     padding-top: 2vh;
     padding-bottom: 5vh;
     padding-left: 5vw;
     padding-right: 5vw;
-    background-color: rgb(200, 200, 200);
+    background-color: rgb(232, 232, 235);
     text-align: left;
-
+    border-radius: 2%;
+    height: 45vh;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1.25em;
-    height: 45vh;
+}
+
+.fp-homeoverview {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.25em;
+    background-color: rgb(51, 51, 51);
+    color: white;
+
+    padding-left: 5vw;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    margin-top: 0;
+    margin-bottom: 0;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.fp-ovbox {
+    width: 20vw;
+    margin: 1%;
+}
+
+.fp-homeoverview h2,h3 {
+    color: #009de7;
+    font-family: "Helvetica", sans-serif;
+    text-align: center;
+}
+.fp-homeoverview h2 {
+    width: 100vw;
+    text-align: left;
+    text-decoration: underline;
+    text-decoration-thickness: .1em;
 }
