--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,11 +1,18 @@
+body {
+    overflow-x: hidden;
+}
+
 .fp-greeter {
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     fill: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("../img/cityscape.png");
+    background-size: cover;
+    background-position: center;
 }
 
 .fp-greeter h1 {
@@ -13,6 +20,8 @@
     font-size: 3em;
     position: relative;
     bottom: 10vh;
+    text-align: center;
+    line-height: 150%;
 }
 
 .fp-greeter h1 span {
@@ -21,20 +30,19 @@
 }
 
 .fp-whyus {
-    width: 75vw;
     padding-top: 2vh;
     padding-bottom: 5vh;
     padding-left: 5vw;
     padding-right: 5vw;
     background-color: rgb(232, 232, 235);
     text-align: left;
-    border-radius: 2%;
-    height: 45vh;
-
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1.25em;
+}
+.fp-whyus h2 {
+    color: #009de7;
 }
 
 .fp-homeoverview {
@@ -42,8 +50,9 @@
     font-weight: 400;
     font-style: normal;
     font-size: 1.25em;
-    background-color: rgb(51, 51, 51);
-    color: white;
+    /*background-color: rgb(51, 51, 51);*/
+    background-color: rgb(232, 232, 235);
+    color: black;
 
     padding-left: 5vw;
     padding-top: 5vh;
@@ -61,13 +70,53 @@
 }
 
 .fp-homeoverview h2,h3 {
-    color: #009de7;
+    color: black;
     font-family: "Helvetica", sans-serif;
     text-align: center;
 }
 .fp-homeoverview h2 {
+    color: #009de7;
     width: 100vw;
+    text-align: center;
+    padding-right: 5vw;
+    /* text-decoration: underline;
+    text-decoration-thickness: .1em; */
+}
+
+.fp-advsvc {
+    font-family: "IBM Plex Sans", sans-serif;
+    padding-top: 5vh;
+    padding-left: 5vw;
+    padding-right: 15vw;
+    font-size: 1.25em;
+}
+
+.fp-advsvc h2,h3 {
+    font-family: "Helvetica", sans-serif;
     text-align: left;
-    text-decoration: underline;
-    text-decoration-thickness: .1em;
+    margin-top: 1vh;
+}
+
+.fp-advsvc h2 {
+    color: #009de7;
+}
+
+.fp-contactus {
+    font-family: "IBM Plex Sans", sans-serif;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    padding-left: 5vw;
+    padding-right: 15vw;
+    font-size: 1.25em;
+}
+
+.fp-contactus h2 {
+    font-family: "Helvetica", sans-serif;
+    color: #009de7;
+    /* text-align: center; */
+}
+
+.fp-contactus p {
+    justify-self: left;
+
 }
